--- a/boot-thymeleaf/src/main/resources/templates/m7.html
+++ b/boot-thymeleaf/src/main/resources/templates/m7.html
@@ -10,16 +10,23 @@
 	<!-- 
 	데이터를 일정한 형식으로 변환하는 도구
 	
+	#numbers.formatDecimal(표시 값, 최소 정수 자릿수, 최소 소수 자릿수)
+	 
 	 -->
 	<h2>숫자</h2>
 	<div th:text="${num1}"></div>
-	<div th:text="${#numbers.formatInteger(num1, 3, 'COMMA')}"></div>
+	<div th:text="${#numbers.formatInteger(1, 3, 'COMMA')}"></div>    <!-- 남은 자리 0으로 채운다. 최대 3자리 --> 
+	<div th:text="${#numbers.formatCurrency(1)}"></div>
+	<div th:text="${#numbers.formatPercent(num1, 5, 1)}"></div>
+	<div th:text="${#numbers.formatInteger(1, 3, 'COMMA')}"></div>
+	<div th:text="${#numbers.formatInteger(num1, 3, 'COMMA')}"></div>  <!-- 콤마로 짜른다. -->
+	
 	<!-- 두번쨰 인자는 표현자리수다. -->
 	<div th:text="${num2}"></div>
-	<div th:text="${#numbers.formatDecimal(num2, 3, 'COMMA', 1, 'POINT')}"></div>
+	<div th:text="${#numbers.formatDecimal(num2, 3, 'COMMA', 1, 'POINT')}"></div> <!-- 3자리씩콤마로 짜르고, 1자리 소수부분 나타낸다. -->
 	
 	<h2>날짜</h2>
-	<!--/* <div th:text="${now}"></div> */-->
+	<div th:text="${now}"></div> 
 	<div th:text="${#dates.year(now)}"></div>
 	<div th:text="${#dates.month(now)}"></div>
 	<div th:text="${#dates.monthName(now)}"></div>
@@ -32,7 +39,6 @@
 	<div th:text="${#dates.dayOfWeek(now)}"></div>
 	<div th:text="${#dates.dayOfWeekName(now)}"></div>
 	<div th:text="${#dates.dayOfWeekNameShort(now)}"></div>
-	
 	<div th:text="${#dates.format(now)}"></div>
 	<div th:text="${#dates.format(now, 'yyyy-MM-dd HH:mm:ss')}"></div>
 	<div th:text="${#dates.format(now, 'yyyy-MM-dd aa hh:mm:ss')}"></div>
