--- a/boot-thymeleaf/src/main/resources/templates/m6.html
+++ b/boot-thymeleaf/src/main/resources/templates/m6.html
@@ -38,10 +38,14 @@
 	
 	<div th:inline="text">[[${txt}]]</div>
 	<div th:inline="text">[(${txt})]</div>
+	
 	<div>[(${txt})]</div> 
 	<!-- th:inline은 생략이 가능하다. -->
 	<!-- 아래처럼 타임리프 주석으로 해라 -->
 	<!--/* <div th:inline="text">[[${a}]] + [[${b}]] = [[${a + b}]]</div> */-->
+	
+	<div th:inline="text">[[${num}]] + [[${num}]] = [[${num + num}]]</div>
+	
 	<div id="label1"></div>
 	<div id="label2"></div>
 	
@@ -49,7 +53,7 @@
 <script>
 
 	let name1 = '[[${name}]]';
-	let num1 = [[${num}]];
+	/* let num1 = [[${num}]]; */
 	let names1 = '[[${names}]]';
 	let dto1 = '[[${dto}]]';
 	// 소스 보기에서 자바스크립트 배열이 아니다. 
@@ -60,10 +64,11 @@
 <script th:inline="javascript">
 
 	//let name2 = '[[${name}]]'; // 이거 쓰면 " " 붙어서 나온다.
-	let name2 = [[${name}]]; // 이거 쓰면 " " 붙어서 나온다.
-	let num2 = [[${num}]];
+	//let name2 = [[${name}]]; // 이거 쓰면 " " 붙어서 나온다.
+	/* let num2 = [[${num}]];
 	let names2 = [[${names}]];
-	let dto2 = [[${dto}]];
+	let dto2 = [[${dto}]]; */
+	let dto3 = '[(${dto})]';
 	// 소스 보기에서 자바스크립트 배열이다. 손댈것이 없다.  
 	document.getElementById('label2').textContent = name2;
 	
